[fix] Fix module exports for accessing replacement nodes from graal